RESOLVED FIXED245609
Fix deprecated system colors to match same-as requirements in CSS Color 4
https://bugs.webkit.org/show_bug.cgi?id=245609
Summary Fix deprecated system colors to match same-as requirements in CSS Color 4
Sam Weinig
Reported 2022-09-23 16:51:39 PDT
CSS Color 4 deprecates some of the system colors and adds a "same-as" requirement for each of them - https://drafts.csswg.org/css-color-4/#deprecated-system-colors.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-30 16:52:17 PDT
Vitaly Dyackhov
Comment 2 2023-08-18 07:16:18 PDT
EWS
Comment 3 2023-09-19 08:13:50 PDT
Committed 268124@main (a396d027d051): <https://commits.webkit.org/268124@main> Reviewed commits have been landed. Closing PR #16832 and removing active labels.
WebKit Commit Bot
Comment 4 2023-09-20 08:41:08 PDT
Re-opened since this is blocked by bug 261823
Vitaly Dyackhov
Comment 5 2023-10-11 04:31:50 PDT
EWS
Comment 6 2023-10-24 16:04:34 PDT
Committed 269740@main (29dde143ed81): <https://commits.webkit.org/269740@main> Reviewed commits have been landed. Closing PR #18937 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.