Fix deprecated system colors to match same-as requirements in CSS Color 4 https://bugs.webkit.org/show_bug.cgi?id=245609

Reviewed by Aditya Keerthi.

CSS Color 4 deprecates some of the system colors
and adds a "same-as" requirement for each of them.

https://drafts.csswg.org/css-color-4/#deprecated-system-colors

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/system-color-compute-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-color/system-color-compute-expected.txt: Removed.
* LayoutTests/platform/glib/tables/mozilla/bugs/bug103533-expected.txt:
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/ios-wk2/TestExpectations:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/css/css-color/system-color-compute-expected.txt: Removed.
* LayoutTests/platform/ios/tables/mozilla/bugs/bug103533-expected.txt:
* LayoutTests/platform/mac/TestExpectations:
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/css/css-color/system-color-compute-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-color/system-color-compute-expected.txt.
* LayoutTests/platform/mac/tables/mozilla/bugs/bug103533-expected.txt:
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::systemColor const):
* Source/WebCore/rendering/RenderThemeAdwaita.cpp:
(WebCore::RenderThemeAdwaita::systemColor const):
* Source/WebCore/rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::systemColor const):

Canonical link: https://commits.webkit.org/268124@main